<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    app:cardCornerRadius="25dp"
    android:layout_margin="5dp"
    app:cardElevation="10dp">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:background="#4CA1DF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timer_tv"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_type"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_number_tv" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_tv"/>


        <TextView
            android:id="@+id/order_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="#FFFFFF"
            android:text="@string/order_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_type" />

        <TextView
            android:id="@+id/order_description1_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="#EFEFF0"
            android:text="@string/items"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_description_tv" />



        <TextView
            android:id="@+id/order_description2_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="#FFFFFF"
            android:text="@string/items1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_description1_tv" />

        <TextView
            android:id="@+id/order_description3_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="#EFEFF0"
            android:text="@string/items2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_description2_tv" />

        <TextView
            android:id="@+id/order_description4_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="#FFFFFF"
            android:text="@string/items3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_description3_tv" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>